<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/current_location"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:id="@+id/scroll_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/location"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_boarder"
                android:hint="@string/country"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/txt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_boarder"
                android:hint="@string/city"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/txt_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pin_code"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_boarder"
                android:hint="@string/pin_code"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_boarder"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/txt_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/latitude"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_boarder"
                android:hint="@string/latitude"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/txt_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/longitude"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edt_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_boarder"
                android:hint="@string/longitude"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_get_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:text="@string/get_location"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_get_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:layout_marginStart="20dp"
                    android:text="@string/get_map"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>